# app

./: .dockerignore  .env.production  .gitignore  Caddyfile  README.md  dev.bat  docker-compose.yml  vercel.json
nc-api/: .dockerignore  .env.example  .gitignore  AGENTS.md  BRAND.md  Dockerfile  MENSAJES.md  Procfile  README.md  entrypoint.sh  pyproject.toml  railway.json
nc-api/app/: main.py  seed.py
nc-api/app/api/: webhooks.py
nc-api/app/api/v1/: admin.py  agent_templates.py  agents.py  auth.py  auto_replies.py  billing.py  conversations.py  metrics.py  platform_connections.py  router.py  tenants.py  whatsapp_numbers.py
nc-api/app/core/: config.py  encryption.py  rate_limiter.py  tenancy.py
nc-api/app/db/: base.py  models.py  session.py
nc-api/app/db/migrations/: env.py
nc-api/app/modules/agents/: models.py  schemas.py  template_models.py  template_schemas.py  templates.py  utils.py
nc-api/scripts/: make_superadmin.py  migrate_rbac_data.py
nc-api/tests/: conftest.py  test_admin.py  test_agent_connection_integration.py  test_agent_connection_link.py  test_agent_crud.py  test_agent_templates.py  test_auth_registration.py  test_billing.py  test_conversations_models.py  test_conversations_schemas.py  test_encryption.py  test_evolution_keywords.py  test_isolation.py  test_platform_adapter.py  test_platform_connections.py  test_rbac_audit.py  test_switch_tenant.py  test_telegram_adapter.py  test_telegram_client.py  test_telegram_handler.py  test_telegram_webhook.py  test_tenancy.py  test_tenant_crud.py  test_webhook_handler.py  test_webhook_routing.py
(+220 files in other folders)
